--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-placeholder": "^4.0.3",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
