--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/runtime": "^7.12.1",
     "axios": "^0.21.0",
     "dotenv-webpack": "^4.0.0",
+    "just-debounce-it": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
