--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/runtime": "^7.12.1",
     "axios": "^0.21.0",
+    "copy-to-clipboard": "^3.3.1",
     "dotenv-webpack": "^4.0.0",
     "just-debounce-it": "^1.1.0",
     "prop-types": "^15.7.2",
