--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-prod": "webpack --mode production ",
+    "build": "webpack --mode production ",
     "dev": "webpack-dev-server --open --mode development"
   },
   "repository": {
