--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p && cp _redirects dist/_redirects && node ./src/utils/createEnv.js ",
+    "build": "webpack -p  && node ./src/utils/createEnv.js ",
     "dev": "webpack-dev-server --open --mode development"
   },
   "repository": {
