--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@babel/runtime": "^7.12.1",
-    "axios": "^0.21.0",
     "copy-to-clipboard": "^3.3.1",
     "dotenv-webpack": "^4.0.0",
     "just-debounce-it": "^1.1.0",
@@ -29,8 +28,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
-    "react-placeholder": "^4.0.3",
-    "twitter": "^1.7.1"
+    "react-placeholder": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
